# Remusic-2.0

./: .gitignore  README.md  compose.yaml
Backend/: README.md
Backend/remusic-back/: Cargo.toml  Dockerfile
Backend/remusic-back/migration/src/: lib.rs  m20250511_000001_create_sheet_instance_table.rs
Backend/remusic-back/src/: env_variables.rs  main.rs
Backend/remusic-back/src/controllers/: mod.rs  sheet_instance_controller.rs
Backend/remusic-back/src/entities/: dto_sheet_instance.rs  mod.rs  prelude.rs  sheet_instance.rs  sheet_instance_entity.rs
Backend/remusic-back/src/migrator/: m20250511_000001_create_sheet_instance_table.rs  mod.rs
Backend/remusic-back/src/repositories/: mod.rs  sheet_instance_repository.rs
Backend/remusic-back/src/services/: mod.rs  sheet_instance_service.rs
Backend/remusic-back/src/utilities/: bytes_manipulation.rs  kafka_consumer.rs  kafka_producer.rs  mod.rs
Frontend/: README.md
Frontend/remusic-front/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
Frontend/remusic-front/src/: App.css  App.tsx  index.css  main.tsx
Frontend/remusic-front/src/utilities/: StaticURLSanitize.tsx
Music Converter Microservice/: README.md
Music Converter Microservice/remusic-conversion/: Dockerfile  conversion-script.py  conversion_script.py  convert_xml_to_midi.py  env_variables.py  kafka_functions.py  pyrightconfig.json  requirements.txt  utility_functions.py
Music Converter Microservice/remusic-conversion/src/: conversion_script.py  convert_xml_to_midi.py  env_variables.py  utility_functions.py
Music Converter Microservice/remusic-conversion/test_files/: MozaVeilSample.xml
remusic/static/2_2/: 2_music_xml.xml
remusic/temp/1/midi/: 1_musicxml.mid
(+32 files in other folders)
