[package]
name = "remusic-back"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-web = "4"
base64 = "0.22.1"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
logger = "0.4.0"
rdkafka = { version = "0.37.0" }
sea-orm = { version = "1.1.11", features = ["macros", "runtime-async-std-native-tls", "sqlx-postgres"] }
sea-orm-migration = { version = "1.1.11", features = ["runtime-async-std-native-tls", "sqlx-postgres"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.45.1"
[dependencies.uuid]
version = "1.17.0"
features = [
    "v4",
]